VS2017 compatibility with optimal compile flags -- fixed m > 1 optimisation -- code speedups (SSE2 euclidean distance)

--- a/config.h.in
+++ b/config.h.in
@@ -79,7 +79,7 @@
 #undef STDC_HEADERS
 
 /* float as floating-point numbers */
-#undef USE_FLOAT
+#define USE_FLOAT 1
 
 /* hash support */
 #undef USE_HASH
