proper inclusion of tbbmalloc

--- a/vs/yakmo_vs2017/yakmo_vs2017.vcxproj.filters
+++ b/vs/yakmo_vs2017/yakmo_vs2017.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClCompile Include="..\..\src\getline.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\allocator_replacement.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
