--- a/vs/yakmo_vs2017/yakmo_vs2017_dll.vcxproj.filters
+++ b/vs/yakmo_vs2017/yakmo_vs2017_dll.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClCompile Include="..\..\src\yakmo_dll.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\allocator_replacement.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
